--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,15 +1,3 @@
-/**
-* Template Name: PhotoFolio
-* Updated: Jan 09 2024 with Bootstrap v5.3.2
-* Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# Set main reusable colors and fonts using CSS variables
-# Learn more about CSS variables at https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties
---------------------------------------------------------------*/
 /* Fonts */
 :root {
   --font-default: "Open Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -20,7 +8,7 @@
 /* Colors */
 :root {
   --color-default: #fafafa;
-  --color-primary: #27a776;
+  --color-primary: blue;
   --color-secondary: #161718;
 }
 
@@ -44,7 +32,7 @@ a {
 }
 
 a:hover {
-  color: #32cf93;
+  color: blue;
   text-decoration: none;
 }
 
@@ -135,7 +123,7 @@ h6 {
 }
 
 .page-header .cta-btn:hover {
-  background: #2cbc85;
+  background: blue;
 }
 
 /*--------------------------------------------------------------
@@ -162,7 +150,7 @@ h6 {
 }
 
 .scroll-top:hover {
-  background: rgba(39, 167, 118, 0.8);
+  background: blue;
   color: #fff;
 }
 
@@ -870,7 +858,7 @@ h6 {
 }
 
 .gallery-single .portfolio-info .btn-visit:hover {
-  background: #2cbc85;
+  background: blue;
 }
 
 .gallery-single .portfolio-description h2 {
@@ -1157,7 +1145,7 @@ h6 {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: rgba(39, 167, 118, 0.8);
+  background: blue;
 }
 
 @keyframes animate-loading {
@@ -1229,7 +1217,7 @@ h6 {
 }
 
 .hero .btn-get-started:hover {
-  background: #2cbc85;
+  background: blue;
 }
 
 @media (max-width: 768px) {
